[package]
name = "minidrive"
version = "0.1.0"
authors = ["pimpale <gpimpale29@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
rand = "0.8.5"
vulkano = "0.34.1"
vulkano-shaders = { version="0.34.0", features=["shaderc-build-from-source"]}
vulkano-win = "0.34.0"
winit = "0.28"
nalgebra = "0.32.3"
rapier3d = { version = "0.17.2", features=["simd-stable"] }
